test/fail/unclosed_parens.zn
# Test: Unclosed parentheses (expect 1 error)
# ERRORS: 1

func main() {
    var x = (1 + 2
    var valid = (1 + 2)
    return 0
}
